tests/paczka1/fuzzy1/28090233.err
Error in line 1: 08lgAiQs S232 9,6
Error in line 9: 08lgAiQs S279 83,5
Error in line 13: c7BMy0 S279 32,9
Error in line 8: S279 S720 13,1
Error in line 14: c7BMy0 S232 86,1
Error in line 16: S279 S232 97,8
Error in line 30: c7BMy0 S720 36,99
Error in line 31: A7MsM S43 36,6
